<resources>
    <string name="app_name">lab2</string>
    <string name="button_4">Button 4</string>
    <string name="button_3">Button 3</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button 1</string>
    <string name="my_button">My Button</string>
    <string name="left_button">Left 50%</string>
    <string name="right_button">Right 50%</string>
    <string name="center_left_button">Center Left</string>
    <string name="center_button">Center</string>
    <string name="center_right_button">Center Right</string>
    <string name="bottom_button">Bottom</string>
        <string name="button_5">Button 1</string>
        <string name="button_6">Button 2</string>
        <string name="button_7">Button 3</string>
        <string name="button_8">Button 4</string>
        <string name="button_9">Button 5</string>
</resources>