<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/leftButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/left_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/rightButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/right_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/centerLeftButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:text="@string/center_left_button" />

    <Button
        android:id="@+id/centerButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/center_button"
        android:layout_toEndOf="@id/centerLeftButton"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/centerRightButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="-329dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@id/centerButton"
        android:text="@string/center_right_button" />

    <Button
        android:id="@+id/bottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>